Fix topactions menu overlap
This commit fixes the topactions menu overlap by calculating the
available space for app-nav based on the width of topactions.

This commit also fixes the topactions input animation by only
easing if there is enough space available.  The easing definitions
in the CSS are now bound to the "expand" class, which is added and
removed by the JS in BeforeNav after calculation.

The calculation for the animation space takes into account the
topactions width, topLevelMenu width, logo width, and 80px (the max
difference being 6em plus a little extra).

--- a/share/static/css/elevator-light/nav.css
+++ b/share/static/css/elevator-light/nav.css
@@ -214,16 +214,20 @@ ul.sf-menu li {
     -webkit-appearance: textfield;
 }
 
+/* topactions search box sizes and easing definitions */
 #topactions input {
     width: 10em;
 }
 
-#topactions input[type="search"]:focus {
-    width: 16em;
+#topactions input[type="search"].expand {
     -webkit-transition: width 0.25s ease-in-out;
     -moz-transition: width 0.25s ease-in-out;
     -ms-transition: width 0.25s ease-in-out;
     transition: width 0.25s ease-in-out;
+}
+
+#topactions input[type="search"].expand:focus {
+    width: 16em;
 }
 
 @media (max-width: 900px) {
@@ -231,7 +235,7 @@ ul.sf-menu li {
         width: 4.7em;
     }
 
-    #topactions input[type="search"]:focus {
+    #topactions input[type="search"].expand:focus {
         width: 10em;
     }
 }
@@ -256,11 +260,6 @@ ul.sf-menu li {
     padding-left: 0.5em;
     padding-right: 0.5em;
     vertical-align: middle;
-
-    -webkit-transition: width 0.25s ease-in-out;
-    -moz-transition: width 0.25s ease-in-out;
-    -ms-transition: width 0.25s ease-in-out;
-    transition: width 0.25s ease-in-out;
 }
 
 @-moz-document url-prefix() {
